--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,14 +7,16 @@
     <title>hicham-khawand-chatty-portfolio</title>
     <meta name="description" content="A portfolio of Hicham Khawand that is chatty and helpful" />
     <meta name="author" content="Lovable + Hicham" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
 
     <meta property="og:title" content="Hicham Khawand Chatty Portfolio" />
     <meta property="og:description" content="A portfolio of Hicham Khawand that is chatty and helpful" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://example.com/hk-icon.png" />
+    <meta property="og:image" content="/favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://example.com/hk-icon.png" />
+    <meta name="twitter:image" content="/favicon.png" />
 </head>
 
 <body>
