--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Hicham Khawand Chatty Portfolio" />
     <meta property="og:description" content="A portfolio of Hicham Khawand that is chatty and helpful" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.png" />
+    <meta property="og:image" content="/hicham_avatar_small.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="/favicon.png" />
